UCSFD8-861 fix active trail spacing

--- a/docroot/themes/custom/ucsf/scss/navigation/_main-menu.scss
+++ b/docroot/themes/custom/ucsf/scss/navigation/_main-menu.scss
@@ -366,6 +366,7 @@ header .menu--main {
   & > li.menu-item--active-trail {
     & > a {
       border-bottom: $hover-border-size solid $blue;
+      padding-bottom: 0;
     }
   }
 
